@@ -13,9 +13,11 @@ BeeBEEP 3.0.6
 - Fixed a bug in alert beep when a new message is arrived
 - Fixed a bug on stay on top (windows)
 - Added "HideMainToolbar", "HideChatToolbar", "HideUsersPanel" and "HideOtherPanels" options. They can be enabled in beebeep.rc
-- Added "AskNicknameAtStartup" to beebeep.rc also
+- Added "UseEasyConnection" option to beebeep.rc 
 - Added "DisableFileTransfer" option in beebeep.rc
 - Added "DisableSendMessage" option in beebeep.rc
+- Added global shortcut for "Show all chat windows" (default CTRL+ALT+B)
+- Fixed a bug in linkify parser (in some case &nbsp; is added to link)
 
 BeeBEEP 3.0.5
 - Added timestamp and datestamp to home activities (option - right click on text)
